...
  
  /// This `R.string` struct is generated, and contains static references to 1 localization tables.
  struct string {
    /// This `R.string.localizable` struct is generated, and contains static references to 19 localization keys.
    struct localizable {
      /// Value: Done
      static let done = Rswift.StringResource(key: "Done", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Error
      static let error_generic_title = Rswift.StringResource(key: "Error_generic_title", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Explore
      static let landing_title = Rswift.StringResource(key: "landing_title", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Hottest
      static let hottest = Rswift.StringResource(key: "Hottest", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Loading
      static let loading = Rswift.StringResource(key: "Loading", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Loading Snaps
      static let loadingSnaps = Rswift.StringResource(key: "Loading Snaps", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Make sure your device is connected to the internet.
      static let error_not_internet_body = Rswift.StringResource(key: "Error_not_internet_body", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Never Mind
      static let prompt_report_cancel = Rswift.StringResource(key: "Prompt_report_cancel", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Newest
      static let newest = Rswift.StringResource(key: "Newest", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: No internet connection
      static let error_not_internet_title = Rswift.StringResource(key: "Error_not_internet_title", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: OK
      static let oK = Rswift.StringResource(key: "OK", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Oops! Try again later.
      static let error_generic_body = Rswift.StringResource(key: "Error_generic_body", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Oops, there was an error trying get the snaps. please try again later.
      static let error_while_getting_the_snaps_body = Rswift.StringResource(key: "Error_while_getting_the_snaps_body", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
      /// Value: Please report any spam or suspicious photos.
      static let prompt_report_body = Rswift.StringResource(key: "Prompt_report_body", tableName: "Localizable", bundle: R.hostingBundle, locales: [], comment: nil)
...
