...
    
    return final;
}

- (void) sendMMSAnimated:(NSArray *)recipitants withImage:(NSURL *)image {
    if(![MFMessageComposeViewController canSendText]) {
        UIAlertView *warningAlert = [[UIAlertView alloc] initWithTitle:@"Error" message:@"Your device doesn't support SMS!" delegate:nil cancelButtonTitle:@"OK" otherButtonTitles:nil];
        [warningAlert show];
        return;
    }
    
    NSData *imgData = [NSData dataWithContentsOfURL:image];
    MFMessageComposeViewController *messageController = [[MFMessageComposeViewController alloc] init];
...
}

- (void) flagImage:(Snap *)flagObject {
  [SnapServiceManager reportSnap:flagObject.ID OnSuccess:^(NSDictionary *responseObject) {
    [TAOverlay showOverlayWithLabel:NSLocalizedString(@"PUBLISH_DONE", nil) Options:(TAOverlayOptionOverlayTypeSuccess | TAOverlayOptionAutoHide)];
  } OnFailure:^(NSError *error) {
    [TAOverlay showOverlayWithLabel:@"Oops! Try again later." Options:TAOverlayOptionAutoHide | TAOverlayOptionOverlaySizeBar | TAOverlayOptionOverlayTypeError];
  }];
}

#pragma SHAREITEM
- (void)shareItem:(UIImage *)image {
    NSURL *url = [NSURL URLWithString:@"http://okjux.com/"];
...
