...
        view.addSubview(snapsPagedView)
        snapsPageViewController.didMove(toParentViewController: self)
    }

    func setUpMap() {
        map = MKMapView(frame: CGRect(x: 0, y: 0, width: view.width, height: mapHeigth))
        map.accessibilityLabel = "Snaps map"
        map.accessibilityValue = "collapsed"
        map.showsUserLocation = true
        view.insertSubview(map, at: 0)
        MapHelper.zoomToRegion(mapView: map)
        MapHelper.loadMapWithNearbySnaps(mapView: map)
        map.delegate = self
...
